
Bugs Fixed

- Fixed possible simultaneous access of fetcher properties from both
  the parsing thread and the callback thread (thanks istvan & matt).

- Fixed iPhone unit test product names (thanks timac).

- Fixed error generation for XPath expressions with libxml.

- Fixed propagation of proxy challenge errors upon fetch failure (thanks
  castelino & marali).


Release 1.9.1
30-October-2009
Changes since 1.9.0

Additions

- Added GDataFrameworkVersionString function.

Changes

- GDataQueryYouTube's videoQuery now calls through to the base class
  fullTextQuery. (thanks voxxar)

Bugs Fixed

- Fixed criteria for expecting new NSURLConnection callback support to
  start at iPhone OS 3. (thanks christophvz)


Release 1.9.0
28-October-2009
Changes since 1.8.0

Additions

- Added GDATA_INCLUDE compiler conditionals to specify which service's code
  should be built.

- Added iPhone static library build target to the project file.

- Added service method to authenticate without fetching a feed or entry.

- Added setShouldFormatErrorsAsXML: for queries to encourage older API servers
  to return the structured versions of errors.

- Added block callback support to GDataHTTPFetcher

- Added sentData callback support to GDataHTTPFetcher on Snow Leopard and
  iPhone 3.0

- Added GDataAuthenticationFetcher, which can be used to create a fetcher
  for Google ClientLogin authentication, depending only on GDataHTTPFetcher.

- Added cookie storage method "none" to GDataHTTPFetcher to ignore all cookies.

- Added Docs service v3 support, including the revision feed.

- Added convenience method for creating CCR elements from NSXMLElements.

- Added CCR extension support to Health register entry.

- Added epub accessors to Books API.

- Added YouTube convenience accessors highQualityThumbnail and
  mediaContentWithFormatNumber:
  
- Added calendar query setShouldShowHiddenEvents: for displaying unanswered
  calendar invitations.
  